--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>ru.bvn13.imdbspider</groupId>
   <artifactId>parent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.0.1</version>
   <modules>
     <module>core</module>
     <module>runner</module>
